Virtual Logs via mclogs
Change uploading a file to uploading a link to mclogs. Some other minor cleanup such as Windows support :P